Bug 30952: (follow-up) Fix style of floating toolbars
This patch makes some changes to floating toolbars, both hc-sticky
toolbars and DataTables floating toolbars. The changes fix some bugs in
the display (incorrect z-index, unwanted margins) and proposes a
different style for .searchheader-style toolbars (e.g. patron search
results).

To test, apply the patch and rebuild the staff interface CSS. Test pages
with various kinds and combinations of floating toolbars, e.g.:

- Administration -> System preferences
- Patrons -> Patron search results
- Administration -> Libraries
- Catalog search results

--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -2065,8 +2065,7 @@ li {
 
 .searchheader {
     background-color: #f3f4f4;
-    border: 1px solid #696969;
-    border-radius: 5px 5px 5px 5px;
+    box-shadow: 0 0 2px 1px rgba(0,0,0,.2);
     font-size: 80%;
     margin-top: .5em;
     margin-bottom: .5em;
@@ -2077,7 +2076,10 @@ li {
 
     &.floating {
         border-radius: 0;
+        box-shadow: 0 0 2px 1px rgba(0,0,0,.4);
         margin-top: 0;
+        margin-bottom: 0;
+        z-index: 100;
     }
 
     .btn-group {
