--- a/koha-tmpl/intranet-tmpl/prog/css/preferences.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/preferences.css
@@ -97,8 +97,10 @@ h3.collapsed i.fa.fa-caret-down::before {
 }
 
 #toolbar.floating {
-    box-shadow: 0 3px 2px 0 rgba(0, 0, 0, 0.5);
     border-radius: 0;
+    box-shadow: 0 0 2px 1px rgba(0,0,0,.4);
+    margin-top: 0;
+    z-index: 100;
 }
 
 .loading {
