--- a/koha-tmpl/intranet-tmpl/prog/css/src/_tables.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/_tables.scss
@@ -79,6 +79,10 @@ table {
         margin-top: .5em;
         margin-bottom: .5em;
 
+        &.fixedHeader-floating {
+            margin-top: 0;
+        }
+
         &.no-footer {
             border: none;
         }
