--- a/koha-tmpl/intranet-tmpl/prog/css/src/_toolbar.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/_toolbar.scss
@@ -17,8 +17,8 @@
 
     &.floating {
         border-radius: 0;
+        box-shadow: 0 0 2px 1px rgba(0,0,0,.4);
         margin-top: 0;
-        box-shadow: 0 3px 2px 0 rgba(0, 0, 0, .5);
         z-index: 100;
     }
 
